--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -29,3 +29,5 @@
 <br>
 
 <%= link_to 'New Person', new_person_path %>
+<p><%= link_to 'See Theses', theses_path %> <br>
+<%= link_to 'See Faculties', faculties_path %></p>
