--- a/app/views/theses/index.html.erb
+++ b/app/views/theses/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Listing Theses</h1>
 
 <table>
@@ -31,3 +30,5 @@
 <br>
 
 <%= link_to 'New Thesis', new_thesis_path %>
+<p><%= link_to 'See People', people_path %> <br>
+<%= link_to 'See Faculties', faculties_path %></p>
