--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Listing Faculties</h1>
 
 <table>
@@ -27,3 +26,5 @@
 <br>
 
 <%= link_to 'New Faculty', new_faculty_path %>
+<p><%= link_to 'See People', people_path %> <br>
+<%= link_to 'See Theses', theses_path %></p>
